# fty-common-logging

./: .dependencies-graph.dot.part  .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  Makefile.am  README.md  ci_build.sh  ci_dependencies.sh  ci_deploy.sh  ci_deploy_obs.sh  configure.ac  project.xml
builds/check_zproject/: ci_build.sh
doc/: .gitignore  Makefile.am  asciidoc.conf  fty-common-logging.adoc  fty-log.adoc
fty/: fty-log.h  fty_logger.h
include/: Makefile.am  fty-log.h  fty_common_logging_library.h  fty_log.h  fty_log_library.h  fty_logger.h
include/fty-log/: fty_log.h  fty_logger.h
packaging/debian/: changelog  control  copyright  fty-common-logging.dsc.obs  fty-log.dsc.obs  libfty-common-logging-dev.install  libfty-common-logging1.install  libfty-log-dev.install  libfty-log1.install  rules
packaging/redhat/: fty-common-logging.spec  fty-log.spec
src/: .gitignore  Makemodule-local.am  Makemodule.am  fty_common_logging_classes.h  fty_common_logging_private_selftest.cc  fty_common_logging_selftest.cc  fty_log_classes.h  fty_log_private_selftest.cc  fty_log_selftest.cc  libfty_common_logging.pc.in  libfty_log.pc.in  log.cpp  logger.cpp
src/fty-log/: fty_log.cc  fty_logger.cc
test/: CMakeLists.txt  log.cpp  main.cpp
